# Black_Engine

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.ps1  log_config.json  main.cpp  readMeForDevs.md
docs/: Logging.md
src/: Application.cpp  Application.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  main.cpp
src/Core/AssetDatabase/: Asset.h  AssetDatabase.cpp  AssetDatabase.h
src/Core/AssetImporter/: AssetImporterRegistry.cpp  AssetImporterRegistry.h  IAssetImporter.h  ImportContext.h  ImporterRegistry.cpp  ImporterRegistry.h  LuaImporter.cpp  LuaImporter.h  LuaScriptImporter.cpp  LuaScriptImporter.h  MeshImporter.cpp  MeshImporter.h  ShaderImporter.cpp  ShaderImporter.h  TextAssetImporter.cpp  TextAssetImporter.h  TextImporter.cpp  TextImporter.h  TextureImporter.cpp  TextureImporter.h
src/Core/Camera/: Camera.cpp  Camera.h
src/Core/FileSystem/: FileSystem.cpp  FileSystem.h
src/Core/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/Core/InputManager/: IInputEventReceiver.h  InputEvent.h  InputManager.cpp  InputManager.h
src/Core/InputSystem/: InputSystem.cpp  InputSystem.h
src/Core/Logger/: CategoryInfo.cpp  CategoryInfo.h  ConsoleLoggerBackend.cpp  ConsoleLoggerBackend.h  ILogBackend.h  ILogger.h  ILoggerBackend.h  LogMacros.h  LogManager.cpp  LogManager.h  LogTypes.h  Logger.cpp  Logger.h  LoggerConfig.cpp  LoggerConfig.h  LoggerManager.cpp  LoggerManager.h  MockLogBackend.cpp  MockLogBackend.h  MockLogger.cpp  MockLogger.h  SpdlogBackend.cpp  SpdlogBackend.h  SpdlogLogger.cpp  SpdlogLogger.h
src/Core/Math/: BoundingVolume.h  Ray.h  TransformUtils.h
src/Core/ProjectManager/: ProjectManager.cpp  ProjectManager.h
src/Core/SceneManager/: SceneManager.cpp  SceneManager.h
src/Core/Utils/: GuidUtils.cpp  GuidUtils.h  MetaFile.cpp  MetaFile.h
src/Core/WindowManager/: WindowManager.cpp  WindowManager.h
src/Editor/: SelectionManager.cpp  SelectionManager.h
src/Editor/UI/: EditorLayout.cpp  EditorLayout.h
src/Editor/UI/Layout/: EditorLayout.cpp  EditorLayout.h
src/Editor/UI/Panels/: GamePanel.cpp  GamePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  Panel.cpp  Panel.h  ScenePanel.cpp  ScenePanel.h
src/Editor/UI/Panels/GamePanel/: GamePanel.cpp  GamePanel.h
src/Editor/UI/Panels/HierarchyPanel/: HierarchyPanel.cpp  HierarchyPanel.h
src/Editor/UI/Panels/InspectorPanel/: ComponentDrawers.cpp  ComponentDrawers.h  InspectorPanel.cpp  InspectorPanel.h
src/Editor/UI/Panels/ScenePanel/: ScenePanel.cpp  ScenePanel.h
src/Engine/Assets/: Material.h  Texture.h
src/Engine/Component/: BaseComponent.cpp  BaseComponent.h  MeshComponent.cpp  MeshComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  TransformComponent.cpp  TransformComponent.h
src/Engine/Entity/: GameObject.cpp  GameObject.h
src/Engine/Render/: Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  Shader.cpp  Shader.h
src/Engine/Render/IBL/: Cubemap.cpp  Cubemap.h  IBLManager.cpp  IBLManager.h
src/Engine/Render/Material/: Material.cpp  Material.h
src/Engine/Render/Mesh/: Mesh.cpp  Mesh.h
src/Engine/Render/Mesh/EBO/: EBO.cpp  EBO.h
src/Engine/Render/Mesh/VAO/: VAO.cpp  VAO.h
src/Engine/Render/Mesh/VBO/: VBO.cpp  VBO.h
src/Engine/Render/Primitives/: Primitives.cpp  Primitives.h
src/Engine/Render/Shader/: Shader.cpp  Shader.h
src/Engine/Render/Texture/: Texture.cpp  Texture.h
src/Engine/Scene/: Scene.cpp  Scene.h
src/Physics/: CMakeLists.txt
src/shaders/: brdf.frag  brdf.vert  cubemap.vert  default.frag  default.vert  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.vert  irradiance_convolution.frag  pbr.frag  pbr.vert  prefilter.frag  simple.frag  simple.vert
tests/: CMakeLists.txt  test_main.cpp
tests/TestLogger/: BackendTests.cpp  CategoryInfoTests.cpp  ConfigLoadTests.cpp  LogManagerTests.cpp  TestLogger.cpp  TestsLogger.cpp  test_SpdlogBackend.cpp
tests/TestsAssetDatabase/: AssetDatabaseTests.cpp
tests/TestsAssetImporter/: AssetImporterTests.cpp
tests/TestsComponents/: TestComponents.cpp  TestTransform.cpp
tests/TestsFileSystem/: TestFileSystem.cpp
tests/TestsProjectManager/: TestProjectManager.cpp
